--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
     "mocha": "^2.2.5"
   },
   "dependencies": {
-    "output-cache": "^1.0.0",
-    "request": "^2.58.0",
-    "restify": "^3.0.3"
+    "restify": "^3.0.3",
+    "request": "^2.58.0"
   },
   "scripts": {
     "start": "node server/server.js"
