--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mocha": "^2.2.5"
   },
   "dependencies": {
+    "google-images": "^0.1.0",
     "output-cache": "^1.0.0",
     "request": "^2.58.0",
     "restify": "^3.0.3"
